compiler/testData/diagnostics/tests/kt310.kt
fun f(c: LongRange): Int {
    return c.<!FUNCTION_EXPECTED!>start<!>()
}
